# tilechen

./: CHANGELOG.md  README.md  app.py  pyproject.toml
src/tilechen/: app.py  constants.py  palettes.py  paths.py
src/tilechen/model/: palettes.py  tile.py  tilemap.py
src/tilechen/view/: main_window.py
src/tilechen/widgets/: color_button.py  minimap.py  palette_creator.py
src/tileviewer/: constants.py  exceptions.py
src/tileviewer/model/: tile.py  tilemap.py
src/tileviewer/view/: main_window.py
src/tileviewer/widgets/: minimap.py
tests/: test_tile.py
