[project]
name = "tilechen"
version = "0.1.0"
description = "Tilechen is a tile viewer and editor for GameBoy, GameBoy Color and GameBoy Advance ROMs."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bitarray>=3.8.0",
    "numpy>=2.4.1",
    "pyside6>=6.10.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]

[project.scripts]
tilechen = "tilechen.app:run"

[tool.uv]
package = true

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py313"

[tool.ruff.lint.per-file-ignores]
"external/*" = ["ALL"]

[tool.ruff.lint]
select = [
    "I",
    "F",
    "E",
    "W",
    "UP",
    "SIM",
    "B",
    "A",
    "C4",
    "ASYNC",
    "ARG",
    "Q",
    "RET",
    "N",
    "DOC",
    "ISC",
    "ICN",
    "ERA",
    "PTH",
    "ANN",
]
ignore = ["ANN202"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest]
minversion = "9.0"
testpaths = [
    "tests"
]
